--- a/src/main/resources/assets/pluguninonani/lang/en_us.json
+++ b/src/main/resources/assets/pluguninonani/lang/en_us.json
@@ -4,5 +4,14 @@
   "item.pluguninonani.darkness_sword": "§dmood killer",
   "item.pluguninonani.darkness_pickaxe": "§dmood miner",
   "item.pluguninonani.darkness_axe": "§dmood stripper",
-  "item.pluguninonani.darkness_shovel": "§dmood shovel"
+  "item.pluguninonani.darkness_shovel": "§dmood shovel",
+  "item.pluguninonani.darkness_helmet": "§dmood helm",
+  "item.pluguninonani.darkness_chestplate": "§dmoodplate",
+  "item.pluguninonani.darkness_leggings": "§dmood legs",
+  "item.pluguninonani.darkness_boots": "§dmood runners",
+  "item.pluguninonani.oak_boots": "§d oakkkkkk",
+  "item.pluguninonani.oak_leggings": "§d oakkkkk",
+  "item.pluguninonani.oak_helmet": "§d oakkkk",
+  "item.pluguninonani.oak_chestplate": "§d oakkk",
+  "item.pluguninonani.quick_one": "§dquick one"
 }
